# llm-notes-all-in-one

./: .gitignore  .gitmodules  AGENTS.md  CITATION.cff  README.md  book.toml  pyproject.toml
.github/workflows/: mdbook.yml
notes/: 1.Pretrain.md  1.Pretrain理论 .md  SUMMARY.md  index.md
notes/appendix/: math.md
notes/appendix/math/: math.index.md  math.likelihood.md  math.probability-space.md
notes/model-basic/: 1a.tokenizer.md  2.model-overview.md  3.attention.md  index.md
notes/model-extra/: 2a.rope.md  2b.flash-attention.md  2c.gqa.md  2e.long-context.md  index.md
notes/pretrain/: 1.Pretrain.md  1.Pretrain2.md  1.background.md  1.loss.md  1b.history.md  2.model-overview.md  2.optimizer-lr-data.md  2a.rope.md  2d.kv-cache.md  3.attention.md  3.training-details.md  4.eval.md  4.practice.md  index.md  training-index.md
notes/quickstart/: 0.GettingStarted.md
notes/ref/: 0.GettingStarted.md  10-29 MiniMind.mht  11-4 MiniMind 2.mht  2.LLM_Pretrain.md  index.md  大模型入门记录.md  期望的严格数学表达.md
notes/rl/: 1.rl-basic.md
notes/sft/: data-and-chat-template.md  eval.md  full-sft-vs-pretrain-script.md  pitfalls.md  sft-vs-pretrain.md  sft.md
notes/theme/: copy-latex.css  copy-latex.js
notes/utils/: minimind3_upgrade.md
prompts/: polish_speak.md
scripts/: eval_llm.py
src/minimind_learning/dataset/: lm_dataset.py
src/minimind_learning/model/: config_minimind.py  model_minimind.py
src/minimind_learning/trainer/: config_trainer.py  train_dpo.py  train_full_sft.py  train_pretrain.py  trainer_utils.py
